@@ -460,7 +460,7 @@ $handler->override_option('style_options', array(
 $handler = $view->new_display('page', 'Page', 'page_1');
 $handler->override_option('path', 'forum/unanswered');
 
-if (variable_get('advanced_forum_views_as_tabs', FALSE)) {
+if (variable_get('advanced_forum_views_as_tabs', TRUE)) {
   $handler->override_option('menu', array(
     'type' => 'tab',
     'title' => 'Unanswered topics',
